= HEAD

* Separate reloading logic into separate file, so using unreloader in production takes less memory (jeremyevans)

* Add the ability to record dependencies, making it possible to correctly support modules and superclasses (jeremyevans)

* Add :reload option, set to false to not support reloading, useful in production mode (jeremyevans)

* Document that setting the :cooldown option to nil makes the Unreloader not reload (celsworth, jeremyevans) (#3)

* Handle files in subdirectories when monitoring directories (celsworth) (#2)

= 1.1.0 (2014-09-25)

* Allow monitoring of directories, so that new files can be picked up, and deleted files removed (jeremyevans)

* Support ruby 1.8.7 (jeremyevans)

= 1.0.0 (2014-08-12)

* Ignore anonymous classes/modules (jeremyevans)

* Log when attempting to remove a constant that doesn't exist (jeremyevans)

* Allow specifying constants to remove via a block to require, instead of using ObjectSpace (jeremyevans)

* Don't unload constants defined in parents when loading dependencies (jeremyevans)

= 0.9.0 (2014-08-04)

* Initial public release